style.css
#index-bg {
    background-image: url('images/upsidedown-layered-waves-haikei.svg'); 
    background-size:cover; 
    background-attachment: scroll;
}



#index-title-h1 {
    text-align: center; 
    color:rgb(139, 209, 241); 
    font-size:80px; 
    margin-top:20px;
}

#oneJoint-title {
    text-align: center; 
    color:white;
    font-size:70px; 
    margin-top:20px;
}

#oneJoint-desc {
    text-align: center; 
    color:white;
    font-size:30px; 
    margin-top:10px;
}

.index-paragraph {
    background-color: rgb(50, 174, 223); 
    padding:10px; 
    font-size:15px; 
    font-family:Roboto; 
    border:2px rgb(0, 0, 0) solid; 
    border-radius:5px;
    margin-bottom:30px;
}

/* Solid border */
hr.solid {
    margin-top:20px;
    border-top: 10px solid rgb(50, 174, 223);
}

.reflection-bg {
    background-image: url('images/circle-scatter-haikei.svg');
    background-size:cover; 
    background-attachment: fixed;
}

.reflection-jumbotron {
    margin:40px;
    background-color:deepskyblue;
}

.reflection-header {
    text-align:left ;
    color:#57c5f8; 
    font-size:70px; 
    margin-top:20px;
}

.week-header {
    text-align:center; 
    color:#10a7ec; 
    margin-bottom:20px; 
    font-size:50px;
}

.fig-no {
    margin-top:8px;
    color:white;
}

.fig-pic {
    width:45vw; 
    border:5px solid #57c5f8;
}

.index-arrow {
    color:white;
    text-align: center;
    font-size:50px;
}

.team-header {
    color:white; 
    font-size:60px; 
    text-align:center;
}

.team-member {
    color:white; 
    font-size:25px; 
    text-align:center;
}

